--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,11 @@ tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }
 futures = "0.3"
 futures-util = "0.3.17"
 async-stream = { version = "0.3.2", optional = true }
+viuer = "0.6"
+reqwest = "0.11"
+image = "0.24.6"
+ratatui = { version = "0.21.0", features = ["all-widgets"]}
+crossterm = "0.25"
+bytes = "1"
+open = "5"
+urlencoding = "2.1.2"
