--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,9 @@ viuer = "0.6"
 reqwest = "0.11"
 image = "0.24.6"
 ratatui = { version = "0.21.0", features = ["all-widgets"]}
-crossterm = "0.25"
+crossterm = { version = "0.25", features = ["event-stream"] }
 bytes = "1"
 open = "5"
 urlencoding = "2.1.2"
+anyhow = "1.0"
+chrono = "0.4.26"
