--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }
 futures = "0.3"
 futures-util = "0.3.17"
 async-stream = { version = "0.3.2", optional = true }
-viuer = "0.6"
-reqwest = "0.11"
+viuer = { version = "0.6", features = ["sixel"] }
+reqwest = { version = "0.11", features = ["stream"] }
 image = "0.24.6"
 ratatui = { version = "0.21.0", features = ["all-widgets"]}
 crossterm = { version = "0.25", features = ["event-stream"] }
@@ -22,3 +22,6 @@ open = "5"
 urlencoding = "2.1.2"
 anyhow = "1.0"
 chrono = "0.4.26"
+rodio = {version = "0.17.1", features = ["symphonia-mp3"] }
+minimp3 = "0.5.1"
+symphonia = { version = "0.5.3", features = ["mp3"] }
